endpunkte von user_controller gemacht
